# 42-ft-transcendence

./: .dockerignore  .gitignore  Makefile  PRODUCT.md  README.md  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
frontend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  nginx.conf  nginx.local.conf  nginx.production.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: swear-filter.txt
frontend/public/games/: .keep
frontend/src/: App.tsx  GamePlayPage.tsx  api.test.ts  api.ts  commands.ts  constants.ts  i18n.tsx  index.css  main.tsx  moderation.ts  router.ts  terminalTypes.ts  types.ts
frontend/src/components/: AvatarImage.tsx  Terminal.tsx  TerminalSection.tsx  UserDetail.tsx  WriteStatus.tsx  moderation.ts
frontend/src/context/: DataContext.tsx  SessionContext.tsx  TerminalContext.tsx
frontend/src/context/data/: DataContext.tsx  types.ts  useData.ts
frontend/src/context/language/: LanguageContext.tsx  i18n.ts
frontend/src/context/session/: SessionContext.tsx  types.ts  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/locales/: cs.ts  sl.ts
frontend/src/pages/: DiscussionDetailPage.tsx  DiscussionsPage.tsx  FriendsPage.tsx  GamePlayPage.tsx  GamesPage.tsx  HelpPage.tsx  HomePage.tsx  LoginPage.tsx  MailDetailPage.tsx  MailPage.tsx  ProfilePage.tsx  RegisterPage.tsx  UserDetailPage.tsx  UsersPage.tsx  WelcomePage.tsx
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/20260602000000_initial_schema/: down.sql  up.sql
server/migrations/20260629000000_profile_and_friends/: down.sql  up.sql
server/migrations/20260708000000_enrich_schema/: down.sql  up.sql
server/src/: games.rs  main.rs  schema.rs
server/src/authenticator/: mod.rs
server/src/discussions/: discussion_response_factory.rs  mod.rs
server/src/games/: mod.rs
server/src/mails/: mod.rs
server/src/model/: database_initializer.rs  database_migrations.rs  discussions.rs  game_handler.rs  games.rs  mails.rs  mod.rs  tic_tac_toe.lua  user_handler.rs  users.rs
server/src/router/: mod.rs
server/src/session/: mod.rs
server/src/users/: mod.rs  user_handler.rs
server/src/websocket/: mod.rs
src/: App.tsx  api.ts  commands.ts  index.css  types.ts
src/mock/: mockApi.ts  mockData.ts
(+10 files in other folders)
