[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-ws = "0.3.0"
openssl = { version = "0.10" } #, features = ["vendored"]
serde = { version = "1.0.228", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
serde_json = "1.0.149"
downcast-rs = "2.0.2"
actix-security = { version = "0.2.3", features = ["argon2", "http-basic", "session", "jwt"] }
env_logger = "0.11.10"
base64 = { version="0.22.1" }
